--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Responsive Layout</title>
 </head>
+
 <body>
-  
+  <header>H</header>
+
+  <main>
+    <section>1</section>
+    <section>2</section>
+    <section>3</section>
+    <section>4</section>
+    <section>5</section>
+    <section>6</section>
+  </main>
+
+  <footer>F</footer>
 </body>
+
 </html>
