--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Responsive Layout</title>
 </head>
 
 <body>
-  <header>H</header>
+
+  <header>
+    <div class="container d-flex">
+      <img src="img/logo.png" alt="logo">
+      <a href="#"><i class="fa-solid fa-bars"></i></a>
+    </div>
+  </header>
 
   <main>
     <section>1</section>
@@ -24,6 +31,7 @@
   </main>
 
   <footer>F</footer>
+
 </body>
 
 </html>
