add-first-section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,42 @@
   </header>
 
   <main>
-    <section>1</section>
+
+    <section class="container">
+
+      <div class="boxdemo">
+        <h3>Get a demo application</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+        <a href="#" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
+        <img src="img/phone.png" alt="phone" id="phone">
+      </div>
+
+      <div class="box">
+        <i class="fa-solid fa-file-code icon"></i>
+        <h3>Clean code</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+      </div>
+
+     <div class="box">
+      <i class="fa-solid fa-compass-drafting"></i>
+      <h3>Web design</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+     </div>
+
+     <div class="box">
+      <i class="fa-solid fa-laptop-code"></i>
+      <h3>Development</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+     </div>
+
+     <div class="box">
+      <i class="fa-solid fa-bullhorn"></i>
+      <h3>Branding</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+     </div>
+
+    </section>
+
     <section>2</section>
     <section>3</section>
     <section>4</section>
