--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
   <title>Responsive Layout</title>
 </head>
 
@@ -18,14 +19,17 @@
     <div class="container d-flex">
       <img src="img/logo.png" alt="logo">
       <a href="#"><i class="fa-solid fa-bars"></i></a>
+      <div class="menu">
+
+      </div>
     </div>
   </header>
 
   <main>
 
-    <section class="container">
+    <section class="features container">
 
-      <div class="boxdemo">
+      <div class="boxdemo d-flex">
         <h3>Get a demo application</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
         <a href="#" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
