fix-first-section

--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <div class="container d-flex">
       <img src="img/logo.png" alt="logo">
       <a href="#"><i class="fa-solid fa-bars"></i></a>
-      <div class="menu">
-
-      </div>
     </div>
   </header>
 
@@ -29,17 +26,23 @@
 
     <section class="features container">
 
-      <div class="boxdemo d-flex">
-        <h3>Get a demo application</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
-        <a href="#" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
-        <img src="img/phone.png" alt="phone" id="phone">
-      </div>
+      <div class="row">
 
-      <div class="box">
-        <i class="fa-solid fa-file-code icon"></i>
-        <h3>Clean code</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+        <div class="boxdemo d-flex">
+          <div class="left">
+            <h3>Get a demo application</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+            <a href="#" class="btn"><i class="fa-brands fa-apple"></i> App Store</a>
+          </div>
+          <img src="img/phone.png" alt="phone" id="phone">
+        </div>
+
+        <div class="box">
+          <i class="fa-solid fa-file-code icon"></i>
+          <h3>Clean code</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestiae molestias nesciunt harum ab, sit beatae ipsum voluptas accusantium, blanditiis.</p>
+        </div>
+
       </div>
 
      <div class="box">
