--- a/index.html
+++ b/index.html
@@ -15,15 +15,26 @@
 
 <body>
 
+  <!-- menu (default hamburger menu) -->
   <header>
     <div class="container d-flex">
       <img src="img/logo.png" alt="logo">
-      <a href="#"><i class="fa-solid fa-bars"></i></a>
+      <div class="menu">
+        <ul class="d-flex">
+          <li><a href="#">Planning</a></li>
+          <li><a href="#">Testimonials</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Get Started</a></li>
+        </ul>
+      </div>
+      <a href="#" class="mobilemenu"><i class="fa-solid fa-bars"></i></a>
     </div>
   </header>
 
   <main>
 
+    <!-- sezione features -->
     <section class="features container">
 
       <div class="row">
@@ -44,7 +55,7 @@
         </div>
 
       </div>
-
+      
      <div class="box">
       <i class="fa-solid fa-compass-drafting"></i>
       <h3>Web design</h3>
