--- a/index.html
+++ b/index.html
@@ -76,7 +76,20 @@
 
     </section>
 
-    <section>2</section>
+    <!-- planning -->
+    <section class="planning container">
+      <div class="planning-left">
+       <img src="img/planning1.png" alt="planning">
+       <h2>Strategic Planning</h2>
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi aliquam, unde sunt cum tempore rem suscipit debitis dolore ipsa voluptas est numquam inventore natus quasi minus provident corporis cumque odio.</p>
+     </div>
+     <div class="planning-right">
+      <img src="img/planning2.png" alt="planning2">
+      <h2>App Developement</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem dolores at ab corporis ea praesentium consequatur tempora et quod fugit!</p>
+      <a href=""><i class="fa-solid fa-arrow-down"></i></a>
+     </div>
+    </section>
     <section>3</section>
     <section>4</section>
     <section>5</section>
