--- a/index.html
+++ b/index.html
@@ -90,8 +90,37 @@
       <a href=""><i class="fa-solid fa-arrow-down"></i></a>
      </div>
     </section>
-    <section>3</section>
-    <section>4</section>
+
+     <!-- testimonials -->
+    <section class="testimonials container">
+
+      <div class="title">
+        <h4>TESTIMONIALS</h4>
+        <h2>We are committed expert partners</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta optio possimus impedit ratione necessitatibus molestias blanditiis excepturi, voluptatum ducimus repellendus sapiente architecto, veritatis dolores libero odit, eius sequi vitae aperiam?</p>
+      </div>
+
+      <div class="card">
+        <img src="img/testimonial1.jpg" alt="test1">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti blanditiis illo non in ex? Molestias modi cumque pariatur recusandae odio!</p>
+      </div>
+
+      <div class="card">
+        <img src="img/testimonial2.jpg" alt="test2">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti blanditiis illo non in ex? Molestias modi cumque pariatur recusandae odio!</p>
+      </div>
+
+      <div class="card">
+        <img src="img/testimonial3.jpg" alt="test3">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti blanditiis illo non in ex? Molestias modi cumque pariatur recusandae odio!</p>
+      </div>
+
+    </section>
+
+    <!-- benefits -->
+    <section class="container">
+      <h2>Benefits of working with us</h2>
+    </section>
     <section>5</section>
     <section>6</section>
   </main>
