--- a/index.html
+++ b/index.html
@@ -118,9 +118,56 @@
     </section>
 
     <!-- benefits -->
-    <section class="container">
+    <section class="benefits container">
       <h2>Benefits of working with us</h2>
+
+      <div class="boxcard">
+        <div class="cardben">
+          <p class="number">01</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+        </div>
+
+        <div class="cardben">
+          <p class="number">02</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+        </div>
+
+        <div class="cardben">
+          <p class="number">03</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+        </div>
+
+        <div class="cardben">
+          <p class="number">04</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+        </div>
+
+        <div class="cardben">
+          <p class="number">05</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+        </div>
+
+        <div class="cardben">
+          <p class="number">06</p>
+          <p class="title">Ciao</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias fuga corporis, mollitia ratione quos repellat tenetur! Excepturi adipisci vel exercitationem sit aspernatur necessitatibus, vero dignissimos id non? In, ea sunt!</p>
+          <a href="#" class="btn">More</a>
+      </div>
+
+    </div>
+
     </section>
+
     <section>5</section>
     <section>6</section>
   </main>
