--- a/index.html
+++ b/index.html
@@ -168,7 +168,21 @@
 
     </section>
 
-    <section>5</section>
+    <!-- about us -->
+    <section class="about-us container">
+      <div class="text">
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, officia odio veritatis, mollitia architecto commodi voluptatem corporis aliquam eligendi inventore natus iste rerum suscipit ipsum provident consequatur totam, eos molestias omnis illo! Enim incidunt tempore doloribus quam corporis nemo neque quidem suscipit, sed ad iure sint dolorum. Est accusantium aut quidem sunt dolor odio aspernatur libero optio? Cum eligendi cupiditate nobis veniam accusantium doloribus sint impedit? Perferendis porro autem excepturi quod quasi pariatur esse voluptas quisquam accusantium illo maxime, dolorum sint eaque natus voluptate eligendi temporibus itaque in, doloremque, quibusdam velit. Qui ducimus doloremque unde, quo eaque provident. Error nobis dolores voluptate a. Iusto itaque atque temporibus architecto sapiente perferendis, cumque voluptatem. Cumque labore quaerat vero nesciunt saepe esse eius maxime distinctio neque provident maiores, placeat ipsum aperiam commodi porro facere.
+        <br> <br>
+        Ad nam odit porro commodi, debitis numquam placeat obcaecati tempore non cum dolor veritatis vero nobis! Tempora eveniet alias, consectetur, ex fugiat repellat itaque sequi ipsa delectus saepe, voluptate quo placeat fuga hic eligendi vero necessitatibus veniam suscipit autem. Cupiditate totam deserunt distinctio voluptates fugiat. Voluptate inventore perferendis, odio fugit repellat id quis a nobis cum deleniti? Architecto labore quae provident atque eligendi quos cupiditate magnam iusto voluptatum in?</p>
+      </div>
+
+      <div class="ceo">
+        <img src="img/testimonial1.jpg" alt="ceo">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, ea?</p>
+      </div>
+      
+    </section>
     <section>6</section>
   </main>
 
