--- a/index.html
+++ b/index.html
@@ -182,8 +182,17 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, ea?</p>
       </div>
       
+      <!-- get start -->
     </section>
-    <section>6</section>
+    <section class=" get-start container">
+      <h4>GET STARTED</h4>
+      <h3>Simple, Transparent pricing</h3>
+      <h2>It's Free!</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio vero voluptates, iste exercitationem dolores recusandae nobis, laboriosam officiis ipsam maxime, repellat eaque totam quis quidem.</p>
+      <a href="#">Get Started</a>
+      <p class="copyright">Copyright 2022 Boolean Palumbo Carmelo</p>
+    </section>
+
   </main>
 
   <footer>F</footer>
