--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
 
   </main>
 
-  <footer>F</footer>
+  <footer class="credits container">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos dolores quibusdam sit delectus quaerat repellendus.</p>
+    <br> <br>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia, architecto!</p>
+  </footer>
 
 </body>
 
